WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136557
CSS filter on a compositing layer should not cause unncessary backing store allocation
https://bugs.webkit.org/show_bug.cgi?id=136557
Summary
CSS filter on a compositing layer should not cause unncessary backing store a...
Simon Fraser (smfr)
Reported
2014-09-04 16:34:21 PDT
CSS filter on a compositing layer should not cause unncessary backing store allocation
Attachments
Patch
(5.25 KB, patch)
2014-09-04 16:37 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-09-04 16:37:29 PDT
Created
attachment 237657
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-09-04 17:23:54 PDT
https://trac.webkit.org/r173294
Simon Fraser (smfr)
Comment 3
2014-09-05 17:15:04 PDT
***
Bug 136553
has been marked as a duplicate of this bug. ***
Radar WebKit Bug Importer
Comment 4
2014-11-10 09:29:49 PST
<
rdar://problem/18926851
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug