CSS filter on a compositing layer should not cause unncessary backing store allocation https://bugs.webkit.org/show_bug.cgi?id=136557

Reviewed by Dean Jackson.

Source/WebCore:

Remove the style.hasFilter() check from hasBoxDecorations(), since filters aren't
a box decoration. This allows creation of simple container layers with composited filters.

Test: compositing/backing/filter-no-backing.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects):

LayoutTests:

Dump the layer tree on some layer configs with filters.

* compositing/backing/filter-no-backing-expected.txt: Added.
* compositing/backing/filter-no-backing.html: Added.

Canonical link: https://commits.webkit.org/154356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173294 268f45cc-cd09-0410-ab3c-d52691b4dbfc